Added static and mustache resources

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -1,1 +1,3 @@
-{[], cookie_resource, []}.
+{["cookie"], cookie_resource, []}.
+{["static"], static_resource, []}.
+{["mustache"], mustache_resource, []}.
